<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/flag_uk"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/uk"
            android:contentDescription="@string/cd_flag_uk"
            android:padding="8dp"
            android:onClick="onChangeLanguage" />

        <ImageView
            android:id="@+id/flag_france"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/fr"
            android:contentDescription="@string/cd_flag_france"
            android:padding="8dp"
            android:onClick="onChangeLanguage" />


    </LinearLayout>



    <TextView
        android:id="@+id/labelFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelFirstName"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelLastName"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAge" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSkill" />

    <EditText
        android:id="@+id/skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPhone" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:background="@color/submitButton"/>




</LinearLayout>
